<resources>

    <string name="channel_subscribe_message">Subscribe message</string>

    <!--Message for toast-->
    <string name="app_name">Scheduler</string>
    <string name="network_err">Error connecting to server</string>
    <string name="parse_err">Can\'t read data from server</string>
    <string name="empty_dataset">No dataset</string>
    <string name="success_load_dashboards">Dashboards successfully download</string>
    <string name="success_load_events">Events successfully download</string>
    <string name="network_failure">Invalid server response</string>
    <string name="db_failure">Error accessing database</string>
    <string name="empty_title">The title can\'t be empty</string>
    <string name="too_short_title">The title is too short</string>
    <string name="too_long_title">The title is too long</string>
    <string name="options_dialog_dashboard">Select action</string>
    <string name="remote_dashboard_upload">Your dashboard is successfully uploaded to server</string>
    <string name="remote_dashboard_update">Your remote dashboard is successfully updated at server</string>
    <string name="subscribe">You have successfully\nsubscribe to updates</string>
    <string name="unsubscribe">You have successfully\nunsubscribed from updates</string>

    <string name="local_dashes_title">Private schedulers</string>
    <string name="cloud_dashes_title">Cloud of schedulers</string>
    <string name="event_create_title">Create event</string>
    <string name="event_edit_title">Edit event</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>

    <!--Authentication-->
    <string name="auth_access_db">You must log in to access\nyour personal account</string>
    <string name="owner_access_db">Only the author of dashboard can edit it</string>
    <string name="subscribe_access_db">You must be authorized\nto subscribe to updates</string>
    <string name="create_access_dashboard">You must be authorized\nto create new dashboard</string>
    <string name="failed_to_unauth">Failed to log out.\nPlease try again</string>

    <!--Text for labels-->
    <string name="title_of_dashboard">Title of new dashboard</string>
    <string name="rename_dashboard">New title of dashboard</string>
    <string name="delete_dashboard_confirm">Do you really want to delete the dashboard?</string>
    <string name="delete_event_confirm">Do you really want to delete the event?</string>
    <string name="create_button">Create</string>
    <string name="apply_button">Apply</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="pick_date_time">Pick date and time of event</string>


    <string name="logo_description">Dashboards &amp; notifications</string>

    <!--Input hints-->
    <string name="event_title_hint">Title</string>
    <string name="event_description_hint">Description</string>
    <string name="event_date">Date</string>
    <string name="event_type">Type of event</string>
    <string name="event_priority">Priority</string>
    <string name="event_create_button">Add event!</string>
    <string name="event_edit_button">Edit event</string>
    <string name="date_picker_stub">Click to choose date</string>

    <string-array name="event_priority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Ultra-High</item>
    </string-array>

    <string-array name="event_type">
        <item>One time</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every year</item>
        <item>Every century</item>
    </string-array>


    <!--Event holder-->
    <string name="event_type_label">Type of event: </string>
    <string name="event_priority_label">Priority: </string>
    <string name="no_description">No description available</string>

    <!--FCM-->
    <string name="fcm_inserted_events">Inserted events:</string>
    <string name="fcm_updated_events">Updated events:</string>
    <string name="fcm_deleted_events">Deleted events:</string>

</resources>
